8282007: Assorted enhancements to jpackage testing framework
Reviewed-by: asemenyuk, mbaesken
Backport-of: cd234f5dbebd18ebf0c78dfdf533318cdc627971